--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,18 +2,12 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
-
-COPY . .
-
 RUN apt-get update && \
     apt-get install -y default-libmysqlclient-dev build-essential pkg-config
 
-RUN apt-get install build-dep python-psycopg2
-
-
-
-COPY requirements.txt requirements.txt
+COPY requirements.txt .
 RUN pip install -r requirements.txt
 
+COPY . .
 
-CMD ["python", "app.py"]
+CMD ["streamlit", "run", "app.py", "--server.port=5001"]
