--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,46 @@
 -i https://pypi.org/simple
-blinker==1.7.0; python_version >= '3.8'
+altair==5.3.0; python_version >= '3.8'
+attrs==23.2.0; python_version >= '3.7'
+blinker==1.8.2; python_version >= '3.8'
+cachetools==5.3.3; python_version >= '3.7'
+certifi==2024.2.2; python_version >= '3.6'
+charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 click==8.1.7; python_version >= '3.7'
-flask==3.0.2; python_version >= '3.8'
-flask-sqlalchemy==3.1.1; python_version >= '3.8'
-importlib-metadata==7.1.0; python_version >= '3.8'
-itsdangerous==2.1.2; python_version >= '3.7'
-jinja2==3.1.3; python_version >= '3.7'
+gitdb==4.0.11; python_version >= '3.7'
+gitpython==3.1.43; python_version >= '3.7'
+idna==3.7; python_version >= '3.5'
+jinja2==3.1.4; python_version >= '3.7'
+joblib==1.4.2; python_version >= '3.8'
+jsonschema==4.22.0; python_version >= '3.8'
+jsonschema-specifications==2023.12.1; python_version >= '3.8'
+markdown-it-py==3.0.0; python_version >= '3.8'
 markupsafe==2.1.5; python_version >= '3.7'
-mysqlclient==2.2.4; python_version >= '3.8'
-psycopg2-binary==2.9.9; python_version >= '3.7'
+mdurl==0.1.2; python_version >= '3.7'
+numpy==1.26.4; python_version < '3.11'
+packaging==24.0; python_version >= '3.7'
+pandas==2.2.2; python_version >= '3.9'
+pillow==10.3.0; python_version >= '3.8'
+protobuf==4.25.3; python_version >= '3.8'
+pyarrow==16.0.0; python_version >= '3.8'
+pydeck==0.9.1; python_version >= '3.8'
+pygments==2.18.0; python_version >= '3.8'
 pymysql==1.1.0; python_version >= '3.7'
-sqlalchemy==2.0.29; python_version >= '3.7'
-typing-extensions==4.10.0; python_version >= '3.8'
-werkzeug==3.0.1; python_version >= '3.8'
-zipp==3.18.1; python_version >= '3.8'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pytz==2024.1
+referencing==0.35.1; python_version >= '3.8'
+requests==2.31.0; python_version >= '3.7'
+rich==13.7.1; python_full_version >= '3.7.0'
+rpds-py==0.18.1; python_version >= '3.8'
+scikit-learn==1.4.2; python_version >= '3.9'
+scipy==1.13.0; python_version >= '3.9'
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+smmap==5.0.1; python_version >= '3.7'
+streamlit==1.34.0; python_version >= '3.8' and python_full_version != '3.9.7'
+tenacity==8.3.0; python_version >= '3.8'
+threadpoolctl==3.5.0; python_version >= '3.8'
+toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+toolz==0.12.1; python_version >= '3.7'
+tornado==6.4; python_version >= '3.8'
+typing-extensions==4.11.0; python_version >= '3.8'
+tzdata==2024.1; python_version >= '2'
+urllib3==2.2.1; python_version >= '3.8'
