--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -49,6 +49,7 @@ tornado = "==6.4"
 typing-extensions = "==4.11.0"
 tzdata = "==2024.1"
 urllib3 = "==2.2.1"
+streamlit-option-menu = "*"
 
 [dev-packages]
 
