--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,7 +16,7 @@ jsonschema-specifications==2023.12.1; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
 markupsafe==2.1.5; python_version >= '3.7'
 mdurl==0.1.2; python_version >= '3.7'
-numpy==1.26.4; python_version < '3.11'
+numpy==1.26.4; python_version >= '3.9'
 packaging==24.0; python_version >= '3.7'
 pandas==2.2.2; python_version >= '3.9'
 pillow==10.3.0; python_version >= '3.8'
@@ -36,6 +36,7 @@ scipy==1.13.0; python_version >= '3.9'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 smmap==5.0.1; python_version >= '3.7'
 streamlit==1.34.0; python_version >= '3.8' and python_full_version != '3.9.7'
+streamlit-option-menu==0.3.12; python_version >= '3.6'
 tenacity==8.3.0; python_version >= '3.8'
 threadpoolctl==3.5.0; python_version >= '3.8'
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
