--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,33 +1,37 @@
 version: '3'
 
 services:
-  backend:
-    build: ./backend
-    ports:
-      - "5001:5001"
-    # TODO: healthcheck
-    # depends_on:
-    #   mariadb:
-    #     condition: service_healthy
-
   mariadb:
     image: mariadb
     ports:
       - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: app_db
-      MYSQL_USER: root
-      MYSQL_PASSWORD: password
+      MARIADB_ROOT_PASSWORD: password
+      MARIADB_DATABASE: app_db
       TZ: Asia/Tokyo
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-    command: --init-file /docker-entrypoint-initdb.d/init.sql
-    # healthcheck:
-    #   test: [ "CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-u", "root", "-p", "password"]
-    #   interval: 10s
-    #   timeout: 5s
-    #   retries: 3
+      - mariadb_data:/var/lib/mysql
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "healthcheck.sh",
+          "--su-mysql",
+          "--connect",
+          "--innodb_initialized"
+        ]
+      interval: 10s
+      timeout: 10s
+      retries: 3
+
+  backend:
+    build: ./backend
+    ports:
+      - "5001:5001"
+    depends_on:
+      mariadb:
+        condition: service_healthy
 
 volumes:
   mariadb_data:
