--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,25 +1,39 @@
 -i https://pypi.org/simple
 altair==5.3.0; python_version >= '3.8'
 attrs==23.2.0; python_version >= '3.7'
+beautifulsoup4==4.12.3; python_full_version >= '3.6.0'
+bleach==6.1.0; python_version >= '3.8'
 blinker==1.8.2; python_version >= '3.8'
 cachetools==5.3.3; python_version >= '3.7'
 certifi==2024.2.2; python_version >= '3.6'
 charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 click==8.1.7; python_version >= '3.7'
+defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+fastjsonschema==2.19.1
 gitdb==4.0.11; python_version >= '3.7'
 gitpython==3.1.43; python_version >= '3.7'
 idna==3.7; python_version >= '3.5'
+importlib-metadata==7.1.0; python_version < '3.10'
 jinja2==3.1.4; python_version >= '3.7'
 joblib==1.4.2; python_version >= '3.8'
 jsonschema==4.22.0; python_version >= '3.8'
 jsonschema-specifications==2023.12.1; python_version >= '3.8'
+jupyter-client==8.6.1; python_version >= '3.8'
+jupyter-core==5.7.2; python_version >= '3.8'
+jupyterlab-pygments==0.3.0; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
 markupsafe==2.1.5; python_version >= '3.7'
 mdurl==0.1.2; python_version >= '3.7'
+mistune==3.0.2; python_version >= '3.7'
+nbclient==0.10.0; python_full_version >= '3.8.0'
+nbconvert==7.16.4; python_version >= '3.8'
+nbformat==5.10.4; python_version >= '3.8'
 numpy==1.26.4; python_version >= '3.9'
 packaging==24.0; python_version >= '3.7'
 pandas==2.2.2; python_version >= '3.9'
+pandocfilters==1.5.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pillow==10.3.0; python_version >= '3.8'
+platformdirs==4.2.1; python_version >= '3.8'
 protobuf==4.25.3; python_version >= '3.8'
 pyarrow==16.0.0; python_version >= '3.8'
 pydeck==0.9.1; python_version >= '3.8'
@@ -27,6 +41,7 @@ pygments==2.18.0; python_version >= '3.8'
 pymysql==1.1.0; python_version >= '3.7'
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2024.1
+pyzmq==26.0.3; python_version >= '3.7'
 referencing==0.35.1; python_version >= '3.8'
 requests==2.31.0; python_version >= '3.7'
 rich==13.7.1; python_full_version >= '3.7.0'
@@ -35,13 +50,18 @@ scikit-learn==1.4.2; python_version >= '3.9'
 scipy==1.13.0; python_version >= '3.9'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 smmap==5.0.1; python_version >= '3.7'
+soupsieve==2.5; python_version >= '3.8'
 streamlit==1.34.0; python_version >= '3.8' and python_full_version != '3.9.7'
 streamlit-option-menu==0.3.12; python_version >= '3.6'
 tenacity==8.3.0; python_version >= '3.8'
 threadpoolctl==3.5.0; python_version >= '3.8'
+tinycss2==1.3.0; python_version >= '3.8'
 toml==0.10.2; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 toolz==0.12.1; python_version >= '3.7'
 tornado==6.4; python_version >= '3.8'
+traitlets==5.14.3; python_version >= '3.8'
 typing-extensions==4.11.0; python_version >= '3.8'
 tzdata==2024.1; python_version >= '2'
 urllib3==2.2.1; python_version >= '3.8'
+webencodings==0.5.1
+zipp==3.18.1; python_version >= '3.8'
