--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,12 +8,20 @@ cachetools==5.3.3; python_version >= '3.7'
 certifi==2024.2.2; python_version >= '3.6'
 charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 click==8.1.7; python_version >= '3.7'
+contourpy==1.2.1; python_version >= '3.9'
+cycler==0.12.1; python_version >= '3.8'
 defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
+entrypoints==0.4; python_version >= '3.6'
+faker==25.1.0; python_version >= '3.8'
 fastjsonschema==2.19.1
+favicon==0.7.0
+fonttools==4.51.0; python_version >= '3.8'
 gitdb==4.0.11; python_version >= '3.7'
 gitpython==3.1.43; python_version >= '3.7'
+htbuilder==0.6.2; python_version >= '3.5'
 idna==3.7; python_version >= '3.5'
 importlib-metadata==7.1.0; python_version < '3.10'
+importlib-resources==6.4.0; python_version < '3.10'
 jinja2==3.1.4; python_version >= '3.7'
 joblib==1.4.2; python_version >= '3.8'
 jsonschema==4.22.0; python_version >= '3.8'
@@ -21,10 +29,16 @@ jsonschema-specifications==2023.12.1; python_version >= '3.8'
 jupyter-client==8.6.1; python_version >= '3.8'
 jupyter-core==5.7.2; python_version >= '3.8'
 jupyterlab-pygments==0.3.0; python_version >= '3.8'
+kiwisolver==1.4.5; python_version >= '3.7'
+lxml==5.2.1; python_version >= '3.6'
+markdown==3.6; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
+markdownlit==0.0.7; python_version >= '3.6'
 markupsafe==2.1.5; python_version >= '3.7'
+matplotlib==3.8.4; python_version >= '3.9'
 mdurl==0.1.2; python_version >= '3.7'
 mistune==3.0.2; python_version >= '3.7'
+more-itertools==10.2.0; python_version >= '3.8'
 nbclient==0.10.0; python_full_version >= '3.8.0'
 nbconvert==7.16.4; python_version >= '3.8'
 nbformat==5.10.4; python_version >= '3.8'
@@ -34,13 +48,17 @@ pandas==2.2.2; python_version >= '3.9'
 pandocfilters==1.5.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pillow==10.3.0; python_version >= '3.8'
 platformdirs==4.2.1; python_version >= '3.8'
+prometheus-client==0.20.0; python_version >= '3.8'
 protobuf==4.25.3; python_version >= '3.8'
 pyarrow==16.0.0; python_version >= '3.8'
 pydeck==0.9.1; python_version >= '3.8'
 pygments==2.18.0; python_version >= '3.8'
+pymdown-extensions==10.8.1; python_version >= '3.8'
 pymysql==1.1.0; python_version >= '3.7'
+pyparsing==3.1.2; python_full_version >= '3.6.8'
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2024.1
+pyyaml==6.0.1; python_version >= '3.6'
 pyzmq==26.0.3; python_version >= '3.7'
 referencing==0.35.1; python_version >= '3.8'
 requests==2.31.0; python_version >= '3.7'
@@ -51,8 +69,18 @@ scipy==1.13.0; python_version >= '3.9'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 smmap==5.0.1; python_version >= '3.7'
 soupsieve==2.5; python_version >= '3.8'
+st-annotated-text==4.0.1; python_version >= '3.5'
 streamlit==1.34.0; python_version >= '3.8' and python_full_version != '3.9.7'
+streamlit-camera-input-live==0.2.0; python_version >= '3.7'
+streamlit-card==1.0.2; python_version >= '3.8'
+streamlit-embedcode==0.1.2; python_version >= '3.6'
+streamlit-extras==0.4.2; python_version not in '2.7, 3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7' and python_version >= '3.8'
+streamlit-faker==0.0.3; python_version >= '3.6'
+streamlit-image-coordinates==0.1.6; python_version >= '3.7'
+streamlit-keyup==0.2.4; python_version >= '3.7'
 streamlit-option-menu==0.3.12; python_version >= '3.6'
+streamlit-toggle-switch==1.0.2; python_version >= '3.6'
+streamlit-vertical-slider==2.5.5; python_version >= '3.8'
 tenacity==8.3.0; python_version >= '3.8'
 threadpoolctl==3.5.0; python_version >= '3.8'
 tinycss2==1.3.0; python_version >= '3.8'
@@ -63,5 +91,6 @@ traitlets==5.14.3; python_version >= '3.8'
 typing-extensions==4.11.0; python_version >= '3.8'
 tzdata==2024.1; python_version >= '2'
 urllib3==2.2.1; python_version >= '3.8'
+validators==0.28.1; python_version >= '3.8'
 webencodings==0.5.1
 zipp==3.18.1; python_version >= '3.8'
