--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -52,6 +52,7 @@ urllib3 = "==2.2.1"
 streamlit-option-menu = "*"
 nbconvert = "*"
 streamlit-extras = "*"
+pymysql-pooling = "*"
 
 [dev-packages]
 
