--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,7 +12,7 @@ contourpy==1.2.1; python_version >= '3.9'
 cycler==0.12.1; python_version >= '3.8'
 defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 entrypoints==0.4; python_version >= '3.6'
-faker==25.1.0; python_version >= '3.8'
+faker==25.2.0; python_version >= '3.8'
 fastjsonschema==2.19.1
 favicon==0.7.0
 fonttools==4.51.0; python_version >= '3.8'
@@ -30,7 +30,7 @@ jupyter-client==8.6.1; python_version >= '3.8'
 jupyter-core==5.7.2; python_version >= '3.8'
 jupyterlab-pygments==0.3.0; python_version >= '3.8'
 kiwisolver==1.4.5; python_version >= '3.7'
-lxml==5.2.1; python_version >= '3.6'
+lxml==5.2.2; python_version >= '3.6'
 markdown==3.6; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
 markdownlit==0.0.7; python_version >= '3.6'
@@ -47,7 +47,7 @@ packaging==24.0; python_version >= '3.7'
 pandas==2.2.2; python_version >= '3.9'
 pandocfilters==1.5.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pillow==10.3.0; python_version >= '3.8'
-platformdirs==4.2.1; python_version >= '3.8'
+platformdirs==4.2.2; python_version >= '3.8'
 prometheus-client==0.20.0; python_version >= '3.8'
 protobuf==4.25.3; python_version >= '3.8'
 pyarrow==16.0.0; python_version >= '3.8'
@@ -55,6 +55,7 @@ pydeck==0.9.1; python_version >= '3.8'
 pygments==2.18.0; python_version >= '3.8'
 pymdown-extensions==10.8.1; python_version >= '3.8'
 pymysql==1.1.0; python_version >= '3.7'
+pymysql-pooling==1.0.6
 pyparsing==3.1.2; python_full_version >= '3.6.8'
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2024.1
