--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -49,9 +49,56 @@ tornado = "==6.4"
 typing-extensions = "==4.11.0"
 tzdata = "==2024.1"
 urllib3 = "==2.2.1"
-streamlit-option-menu = "*"
-nbconvert = "*"
-streamlit-extras = "*"
+streamlit-option-menu = "==0.3.12"
+nbconvert = "==7.16.4"
+streamlit-extras = "==0.4.2"
+beautifulsoup4 = "==4.12.3"
+bleach = "==6.1.0"
+contourpy = "==1.2.1"
+cycler = "==0.12.1"
+defusedxml = "==0.7.1"
+entrypoints = "==0.4"
+faker = "==25.1.0"
+fastjsonschema = "==2.19.1"
+favicon = "==0.7.0"
+fonttools = "==4.51.0"
+htbuilder = "==0.6.2"
+importlib-metadata = "==7.1.0"
+importlib-resources = "==6.4.0"
+jupyter-client = "==8.6.1"
+jupyter-core = "==5.7.2"
+jupyterlab-pygments = "==0.3.0"
+kiwisolver = "==1.4.5"
+lxml = "==5.2.1"
+markdown = "==3.6"
+markdownlit = "==0.0.7"
+matplotlib = "==3.8.4"
+mistune = "==3.0.2"
+more-itertools = "==10.2.0"
+nbclient = "==0.10.0"
+nbformat = "==5.10.4"
+pandocfilters = "==1.5.1"
+platformdirs = "==4.2.1"
+prometheus-client = "==0.20.0"
+pymdown-extensions = "==10.8.1"
+pyparsing = "==3.1.2"
+pyyaml = "==6.0.1"
+pyzmq = "==26.0.3"
+soupsieve = "==2.5"
+st-annotated-text = "==4.0.1"
+streamlit-camera-input-live = "==0.2.0"
+streamlit-card = "==1.0.2"
+streamlit-embedcode = "==0.1.2"
+streamlit-faker = "==0.0.3"
+streamlit-image-coordinates = "==0.1.6"
+streamlit-keyup = "==0.2.4"
+streamlit-toggle-switch = "==1.0.2"
+streamlit-vertical-slider = "==2.5.5"
+tinycss2 = "==1.3.0"
+traitlets = "==5.14.3"
+validators = "==0.28.1"
+webencodings = "==0.5.1"
+zipp = "==3.18.1"
 
 [dev-packages]
 
