hot reload するように変更

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,6 +33,8 @@ services:
         condition: service_healthy
     environment:
       DEV: "true"
+    volumes:
+      - ./backend:/app  
 
 volumes:
   mariadb_data:
