--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,5 +36,13 @@ services:
     volumes:
       - ./backend:/app  
 
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - "8080:8080"
+    environment:
+      ADMINER_DEFAULT_SERVER: mariadb
+
 volumes:
   mariadb_data:
