--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,6 +10,7 @@ charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 click==8.1.7; python_version >= '3.7'
 contourpy==1.2.1; python_version >= '3.9'
 cycler==0.12.1; python_version >= '3.8'
+dbutils==3.1.0; python_version >= '3.8'
 defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 entrypoints==0.4; python_version >= '3.6'
 faker==25.1.0; python_version >= '3.8'
@@ -20,8 +21,8 @@ gitdb==4.0.11; python_version >= '3.7'
 gitpython==3.1.43; python_version >= '3.7'
 htbuilder==0.6.2; python_version >= '3.5'
 idna==3.7; python_version >= '3.5'
-importlib-metadata==7.1.0; python_version < '3.10'
-importlib-resources==6.4.0; python_version < '3.10'
+importlib-metadata==7.1.0; python_version >= '3.8'
+importlib-resources==6.4.0; python_version >= '3.8'
 jinja2==3.1.4; python_version >= '3.7'
 joblib==1.4.2; python_version >= '3.8'
 jsonschema==4.22.0; python_version >= '3.8'
