--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 -i https://pypi.org/simple
 altair==5.3.0; python_version >= '3.8'
+anyio==4.4.0; python_version >= '3.8'
 attrs==23.2.0; python_version >= '3.7'
 beautifulsoup4==4.12.3; python_full_version >= '3.6.0'
 bleach==6.1.0; python_version >= '3.8'
@@ -19,7 +20,11 @@ favicon==0.7.0
 fonttools==4.51.0; python_version >= '3.8'
 gitdb==4.0.11; python_version >= '3.7'
 gitpython==3.1.43; python_version >= '3.7'
+h11==0.14.0; python_version >= '3.7'
 htbuilder==0.6.2; python_version >= '3.5'
+httpcore==1.0.5; python_version >= '3.8'
+httpx==0.27.0; python_version >= '3.8'
+httpx-oauth==0.14.1; python_version >= '3.8'
 idna==3.7; python_version >= '3.5'
 importlib-metadata==7.1.0; python_version >= '3.8'
 importlib-resources==6.4.0; python_version >= '3.8'
@@ -58,6 +63,7 @@ pymdown-extensions==10.8.1; python_version >= '3.8'
 pymysql==1.1.0; python_version >= '3.7'
 pyparsing==3.1.2; python_full_version >= '3.6.8'
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+python-dotenv==1.0.1; python_version >= '3.8'
 pytz==2024.1
 pyyaml==6.0.1; python_version >= '3.6'
 pyzmq==26.0.3; python_version >= '3.7'
@@ -69,6 +75,7 @@ scikit-learn==1.4.2; python_version >= '3.9'
 scipy==1.13.0; python_version >= '3.9'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 smmap==5.0.1; python_version >= '3.7'
+sniffio==1.3.1; python_version >= '3.7'
 soupsieve==2.5; python_version >= '3.8'
 st-annotated-text==4.0.1; python_version >= '3.5'
 streamlit==1.34.0; python_version >= '3.8' and python_full_version != '3.9.7'
@@ -79,6 +86,7 @@ streamlit-extras==0.4.2; python_version not in '2.7, 3.0, 3.1, 3.2, 3.3, 3.4, 3.
 streamlit-faker==0.0.3; python_version >= '3.6'
 streamlit-image-coordinates==0.1.6; python_version >= '3.7'
 streamlit-keyup==0.2.4; python_version >= '3.7'
+streamlit-oauth==0.1.10; python_version >= '3.9'
 streamlit-option-menu==0.3.12; python_version >= '3.6'
 streamlit-toggle-switch==1.0.2; python_version >= '3.6'
 streamlit-vertical-slider==2.5.5; python_version >= '3.8'
