--- a/app/Pipfile
+++ b/app/Pipfile
@@ -100,7 +100,7 @@ validators = "==0.28.1"
 webencodings = "==0.5.1"
 zipp = "==3.18.1"
 dbutils = "*"
-streamlit-oauth = "*"
+streamlit-oauth = "==0.1.11"
 
 [dev-packages]
 
