--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -14,6 +14,7 @@ cycler==0.12.1; python_version >= '3.8'
 dbutils==3.1.0; python_version >= '3.8'
 defusedxml==0.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 entrypoints==0.4; python_version >= '3.6'
+exceptiongroup==1.2.2; python_version < '3.11'
 faker==25.1.0; python_version >= '3.8'
 fastjsonschema==2.19.1
 favicon==0.7.0
@@ -24,7 +25,7 @@ h11==0.14.0; python_version >= '3.7'
 htbuilder==0.6.2; python_version >= '3.5'
 httpcore==1.0.5; python_version >= '3.8'
 httpx==0.27.0; python_version >= '3.8'
-httpx-oauth==0.14.1; python_version >= '3.8'
+httpx-oauth==0.15.0; python_version >= '3.8'
 idna==3.7; python_version >= '3.5'
 importlib-metadata==7.1.0; python_version >= '3.8'
 importlib-resources==6.4.0; python_version >= '3.8'
@@ -86,7 +87,7 @@ streamlit-extras==0.4.2; python_version not in '2.7, 3.0, 3.1, 3.2, 3.3, 3.4, 3.
 streamlit-faker==0.0.3; python_version >= '3.6'
 streamlit-image-coordinates==0.1.6; python_version >= '3.7'
 streamlit-keyup==0.2.4; python_version >= '3.7'
-streamlit-oauth==0.1.10; python_version >= '3.9'
+streamlit-oauth==0.1.11; python_version >= '3.9'
 streamlit-option-menu==0.3.12; python_version >= '3.6'
 streamlit-toggle-switch==1.0.2; python_version >= '3.6'
 streamlit-vertical-slider==2.5.5; python_version >= '3.8'
